# scaffold-ai

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
crates/scaffold-agent/: Cargo.toml
crates/scaffold-agent/src/: lib.rs  policy.rs
crates/scaffold-anthropic/: Cargo.toml
crates/scaffold-anthropic/src/: lib.rs  prompts.rs  wire.rs
crates/scaffold-autumn/: Cargo.toml
crates/scaffold-autumn/src/: lib.rs
crates/scaffold-autumn/tests/: verdicts.rs
crates/scaffold-domain/: Cargo.toml
crates/scaffold-domain/src/: config.rs  error.rs  lib.rs  pr.rs  traits.rs  triage.rs
crates/scaffold-github/: Cargo.toml
crates/scaffold-github/src/: lib.rs  webhook.rs
crates/scaffold-server/: Cargo.toml
crates/scaffold-server/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs  worker.rs
crates/scaffold-server/tests/: pipeline.rs
crates/scaffold-server/tests/fixtures/: test-github-app-key.pem
crates/scaffold-store/: Cargo.toml
crates/scaffold-store/src/: lib.rs  memory.rs  pg.rs
migrations/: 0001_init.sql
smoke-test-fixtures/: 01-create-customer.json  02-create-feature.json  03-create-repos-feature.json  04-check.json  05-track.json  07-check-missing-feature.json  08-check-missing-customer.json  09-attach-missing-product.json
