[workspace]
resolver = "2"
members = [
    "crates/scaffold-domain",
    "crates/scaffold-agent",
    "crates/scaffold-anthropic",
    "crates/scaffold-github",
    "crates/scaffold-autumn",
    "crates/scaffold-store",
    "crates/scaffold-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
scaffold-domain = { path = "crates/scaffold-domain" }
scaffold-agent = { path = "crates/scaffold-agent" }
scaffold-anthropic = { path = "crates/scaffold-anthropic" }
scaffold-github = { path = "crates/scaffold-github" }
scaffold-autumn = { path = "crates/scaffold-autumn" }
scaffold-store = { path = "crates/scaffold-store" }

tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
octocrab = "0.44"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "macros"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
secrecy = "0.10"
wiremock = "0.6"

[profile.release]
lto = "thin"
strip = true
