[package]
name = "scaffold-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scaffold-domain = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
globset = "0.4"

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
