[package]
name = "scaffold-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scaffold-domain = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
