[package]
name = "scaffold-autumn"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scaffold-domain = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
