[package]
name = "scaffold-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scaffold-domain = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
